# VideoPlayerCuda

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cuda/: test.cu
